# launchpad42

./: .env.example  .firebaserc  .gitignore  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules
backend/: .env.example  .gcloudignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  firebase.py  utils.py
backend/app/models/: __init__.py  exercise.py  gamification.py  session.py  tutor.py  user.py
backend/app/routers/: __init__.py  auth.py  curriculum.py  dashboard.py  exam.py  gamification.py  health.py  session.py  telegram.py  tutor.py
backend/app/services/: curriculum_service.py  exam_service.py  exercise_service.py  gamification_service.py  integrity_service.py  session_service.py  telegram_service.py  tutor_service.py
backend/tests/: conftest.py  test_e2e.py  test_exam_service.py  test_exercise_service.py  test_gamification_service.py  test_integrity_service.py  test_models.py  test_routers.py  test_security_fixes.py  test_session_service.py  test_utils.py
content/review_cards/: phase0.yaml
content/tests/: _helpers.sh  test_bridge_arrays_2d.sh  test_bridge_arrays_func.sh  test_bridge_arrays_int.sh  test_bridge_ft_putstr_len.sh  test_bridge_ft_strlen.sh  test_c01_ex00_ft_ft.sh  test_c01_ex01_ft_ultimate_ft.sh  test_c01_ex02_ft_swap.sh  test_c01_ex03_ft_div_mod.sh  test_c01_ex04_ft_ultimate_div_mod.sh  (+181 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: cleanup_user_data.py  deploy.sh  diagnose_data.py  merge_accounts.py  seed.py
(+244 files in other folders)
